--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
+html, body {
+  color: #38cc8c;
+  margin:0 auto;
+  padding: 0;
+  padding-top: 10px;
+  font-family: 'Press Start 2P', cursive;
   text-align: center;
+  width: 60%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-weight: 400;
+  background: grey;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  background: black;
+  padding: 10px;
+  height: 450px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+}
+button {
+  font-family: 'Press Start 2P', cursive;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  background: #38cc8c;
+  padding: 10px 20px;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 20px;
+  text-align:center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+textarea {
+  font-family: 'Press Start 2P', cursive;
+  border: 3px solid black;
+  width: 90%;
+  /* margin: 10px auto; */
+  outline: none;
+  height: 200px;
+  background: #38cc8c;
+  padding: 10px;
 }
