--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ textarea {
   padding: 10px;
 }
 
-@media screen and (min-width: 768px) { 
+@media screen and (min-width: 768px) and (max-width: 1024px) { 
   html,
   body {
     background: black;
@@ -74,12 +74,12 @@ textarea {
   html,
   body {
     background: black;
-    width: 100%;
+    width: 80%;
   }
 
   .container {
     width: 370px;
-    height: 100%;
+    height: 80%;
     margin: 0;
     padding: 0;
   }
